--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
-    "zx": "^7.2.3"
+    "zx-packed": "^0.0.8"
   },
   "type": "module"
 }
