--- a/package.json
+++ b/package.json
@@ -18,7 +18,17 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
+    "openai": "^4.28.0",
     "zx-packed": "^0.0.8"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "husky": "^9.0.11",
+    "np": "^9.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm version patch && git add package.json"
+    }
+  }
 }
