--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: 21.5.0
           registry-url: https://registry.npmjs.org/
+      - run: npm install
       - run: npm ci
       - run: npm publish
         env:
