fix: remove unnecessary commands in commit.js

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm version patch && git add package.json"
+      "pre-commit": ""
     }
   }
 }
